reformat to use new dataset classes

--- a/ESRI-challenge/run.ipynb
+++ b/ESRI-challenge/run.ipynb
@@ -8,10 +8,8 @@
     "import torchvision\r\n",
     "\r\n",
     "# datasets\r\n",
-    "from datasets.esri_datascience_challenge_2019 import ESRI_challenge_2019\r\n",
-    "from datasets.dota_loader import DOTA\r\n",
-    "from datasets import dota_loader\r\n",
-    "from datasets import esri_datascience_challenge_2019\r\n",
+    "from datasets.esri_challenge import EsriChallengeDataset\r\n",
+    "from datasets.dota import DotaDataset\r\n",
     "\r\n",
     "# models\r\n",
     "from models.fastrcnn import FastRCNN\r\n",
@@ -52,31 +50,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "source": [
-    "dataset = ESRI_challenge_2019 (root = \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\ESRI\",\r\n",
-    "                               subset = \"train\", \r\n",
-    "                               subsample_percentage = 1, \r\n",
-    "                               batch_size = 4, \r\n",
-    "                               shuffle = True, \r\n",
-    "                               num_workers = 0)\r\n",
+    "train_cfg = {\r\n",
+    "    \"root\": \"D:\\\\Documents\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\ESRI\",\r\n",
+    "    \"subset\": \"train\",\r\n",
+    "    \"subsample_percentage\": 0.2,\r\n",
+    "    \"batch_size\": 4,\r\n",
+    "    \"shuffle\": True,\r\n",
+    "    \"num_workers\": 0,\r\n",
+    "}\r\n",
+    "train_set = EsriChallengeDataset(train_cfg)\r\n",
     "\r\n",
-    "dataset_test = ESRI_challenge_2019 (root = \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\ESRI\",\r\n",
-    "                               subset = \"test\", \r\n",
-    "                               subsample_percentage = 1, \r\n",
-    "                               batch_size = 4, \r\n",
-    "                               shuffle = True, \r\n",
-    "                               num_workers = 0) "
+    "test_cfg = {\r\n",
+    "    \"root\": \"D:\\\\Documents\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\ESRI\",\r\n",
+    "    \"subset\": \"test\",\r\n",
+    "    \"subsample_percentage\": 0.2,\r\n",
+    "    \"batch_size\": 4,\r\n",
+    "    \"shuffle\": True,\r\n",
+    "    \"num_workers\": 0,\r\n",
+    "}\r\n",
+    "test_set = EsriChallengeDataset(test_cfg)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The original number of images was: 3228\n",
-      "The subsampled number of images is: 3228\n",
-      "The original number of images was: 520\n",
-      "The subsampled number of images is: 520\n"
+      "The number of images on disk is: 3228\n",
+      "The subsampled number of images is: 645\n",
+      "The number of images on disk is: 520\n",
+      "The subsampled number of images is: 104\n"
      ]
     }
    ],
@@ -91,38 +95,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
-    "dataset = DOTA (root = \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\DOTA\",\r\n",
-    "                subset = \"train_split\", \r\n",
-    "                subsample_percentage = 0.1, \r\n",
-    "                batch_size = 2, \r\n",
-    "                shuffle = True, \r\n",
-    "                num_workers = 0, \r\n",
-    "                filter_null = True)\r\n",
+    "train_cfg = {\r\n",
+    "    \"root\": \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\DOTA\",\r\n",
+    "    \"subset\": \"validation_split\",\r\n",
+    "    \"subsample_percentage\": 0.1,\r\n",
+    "    \"batch_size\": 2,\r\n",
+    "    \"shuffle\": True,\r\n",
+    "    \"num_workers\": 0,\r\n",
+    "    \"filter_null\": True\r\n",
+    "}\r\n",
+    "train_set = DotaDataset(train_cfg)\r\n",
     "\r\n",
-    "dataset_test = DOTA (root = \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\DOTA\",\r\n",
-    "                     subset = \"validation_split\", \r\n",
-    "                     subsample_percentage = 0.01, \r\n",
-    "                     batch_size = 2, \r\n",
-    "                     shuffle = True, \r\n",
-    "                     num_workers = 0,\r\n",
-    "                     filter_null = True)"
+    "train_cfg = {\r\n",
+    "    \"root\": \"E:\\\\AiTLAS\\\\aitlas\\\\ESRI-challenge\\\\data\\\\DOTA\",\r\n",
+    "    \"subset\": \"validation_split\",\r\n",
+    "    \"subsample_percentage\": 0.1,\r\n",
+    "    \"batch_size\": 2,\r\n",
+    "    \"shuffle\": True,\r\n",
+    "    \"num_workers\": 0,\r\n",
+    "    \"filter_null\": True\r\n",
+    "}\r\n",
+    "test_set = DotaDataset(train_cfg)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The original number of images is: 177228\n",
-      "After filtering the number of images is: 46117\n",
-      "The subsampled number of images is: 4611\n",
-      "The original number of images is: 234316\n",
-      "After filtering the number of images is: 61939\n",
-      "The subsampled number of images is: 619\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -462,7 +459,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "74e46c725584c0a0efe812c12512a417aaf5813940beb14617dfd18831f9d066"
+   "hash": "1337ad02751e542e6bb294b9829dc27e26806ccfb1e86e43ece7f49cde59483b"
   },
   "kernelspec": {
    "name": "python3",
