--- a/examples/land_use_classification_benchmark.ipynb
+++ b/examples/land_use_classification_benchmark.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# Example of the `aitlas` toolbox in the context of benchmarking a dataset\n",
     "\n",
-    "This notebook shows a sample implementation of a multi class image classification using the `aitlas` toolbox using the Eurosat dataset."
+    "This notebook shows a sample implementation of a multi class image classification using the `aitlas` toolbox using the UC Merced dataset."
    ]
   },
   {
@@ -174,13 +174,7 @@
       "2021-12-02 19:48:08,285 INFO F1_score Micro:0.861904761904762, F1_score Macro:0.8527244313106227, F1_score Weighted:0.8527244313106227, F1_score per Class:[1.         1.         0.95238095 1.         0.94736842 1.\n",
       " 0.33333333 0.90909091 0.94736842 1.         1.         0.7826087\n",
       " 0.64516129 0.66666667 0.83333333 0.46153846 0.88888889 0.75\n",
-      " 0.84210526 0.94736842 1.        ]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.84210526 0.94736842 1.        ]\n",
       "testing on validation set: 100%|██████████████| 473/473 [00:09<00:00, 50.55it/s]\n",
       "2021-12-02 19:48:17,647 INFO F1_score Micro:0.6687830687830688, F1_score Macro:0.6472861567237145, F1_score Weighted:0.6472861567237145, F1_score per Class:[0.92857143 0.89583333 0.7839196  0.87234043 0.41322314 0.92307692\n",
       " 0.04301075 0.76923077 0.78823529 0.68852459 0.96132597 0.61261261\n",
@@ -373,13 +367,7 @@
       " 0.61935484 0.69387755 0.60689655 0.96703297 0.78362573 0.85263158\n",
       " 0.8255814  0.77192982 0.91764706]\n",
       "training: 100%|█████████████████████████████████| 53/53 [00:04<00:00, 12.20it/s]\n",
-      "2021-12-02 19:52:16,921 INFO epoch: 24, time: 4, loss:  0.14896\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "2021-12-02 19:52:16,921 INFO epoch: 24, time: 4, loss:  0.14896\n",
       "testing on train set: 100%|█████████████████████| 53/53 [00:01<00:00, 46.00it/s]\n",
       "2021-12-02 19:52:18,077 INFO F1_score Micro:0.8857142857142857, F1_score Macro:0.8748002939258809, F1_score Weighted:0.8748002939258808, F1_score per Class:[0.95238095 1.         0.90909091 0.94736842 0.86956522 0.88888889\n",
       " 0.18181818 0.8        0.88888889 1.         1.         0.94736842\n",
@@ -2214,13 +2202,7 @@
       "2021-12-02 20:38:32,905 INFO F1_score Micro:0.7722222222222223, F1_score Macro:0.7578570746346968, F1_score Weighted:0.7578570746346966, F1_score per Class:[0.94827586 0.86440678 0.8440367  0.88       0.71641791 0.98305085\n",
       " 0.         0.97560976 0.88695652 0.72340426 0.81355932 0.82608696\n",
       " 0.48780488 0.27272727 0.8411215  0.51851852 0.79194631 0.90909091\n",
-      " 0.86486486 0.85483871 0.9122807 ]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.86486486 0.85483871 0.9122807 ]\n",
       "training:  47%|███████████████                 | 99/210 [00:08<00:08, 12.50it/s]2021-12-02 20:38:40,998 INFO [7, 100], loss:  1.45099\n",
       "training:  95%|█████████████████████████████▍ | 199/210 [00:16<00:00, 12.51it/s]2021-12-02 20:38:48,993 INFO [7, 200], loss:  2.45626\n",
       "training: 100%|███████████████████████████████| 210/210 [00:16<00:00, 12.41it/s]\n",
@@ -2394,13 +2376,7 @@
       "2021-12-02 20:44:08,146 INFO F1_score Micro:0.8436507936507937, F1_score Macro:0.8349784909490565, F1_score Weighted:0.8349784909490565, F1_score per Class:[0.86131387 0.89090909 0.94117647 0.95081967 0.68456376 0.99173554\n",
       " 0.56626506 0.96610169 0.96721311 0.72164948 0.96551724 0.92173913\n",
       " 0.54736842 0.25714286 0.84745763 0.96774194 0.83211679 0.90225564\n",
-      " 0.90322581 0.94915254 0.89908257]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.90322581 0.94915254 0.89908257]\n",
       "training:  47%|███████████████                 | 99/210 [00:08<00:08, 12.53it/s]2021-12-02 20:44:16,237 INFO [19, 100], loss:  0.96787\n",
       "training:  95%|█████████████████████████████▍ | 199/210 [00:15<00:00, 12.53it/s]2021-12-02 20:44:24,224 INFO [19, 200], loss:  1.94693\n",
       "training: 100%|███████████████████████████████| 210/210 [00:16<00:00, 12.43it/s]\n",
@@ -2758,13 +2734,7 @@
       "training:  47%|███████████████                 | 99/210 [00:08<00:08, 12.51it/s]2021-12-02 20:55:32,507 INFO [43, 100], loss:  0.42940\n",
       "training:  95%|█████████████████████████████▍ | 199/210 [00:16<00:00, 12.51it/s]2021-12-02 20:55:40,492 INFO [43, 200], loss:  1.96280\n",
       "training: 100%|███████████████████████████████| 210/210 [00:16<00:00, 12.42it/s]\n",
-      "2021-12-02 20:55:41,316 INFO epoch: 43, time: 17, loss:  0.29273\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "2021-12-02 20:55:41,316 INFO epoch: 43, time: 17, loss:  0.29273\n",
       "testing on train set: 100%|███████████████████| 210/210 [00:04<00:00, 49.61it/s]\n",
       "2021-12-02 20:55:45,553 INFO F1_score Micro:0.9595238095238096, F1_score Macro:0.9598317683926131, F1_score Weighted:0.9598317683926131, F1_score per Class:[0.95238095 0.98734177 1.         0.93670886 0.96202532 0.9047619\n",
       " 0.925      0.93023256 0.94871795 0.94871795 0.97435897 0.97435897\n",
@@ -2980,13 +2950,7 @@
       "2021-12-02 21:02:26,559 INFO F1_score Micro:0.8647619047619047, F1_score Macro:0.8602404041678663, F1_score Weighted:0.8602404041678665, F1_score per Class:[0.96       0.86238532 0.8        0.87619048 0.83673469 0.99009901\n",
       " 0.5        0.95145631 0.90721649 0.88659794 0.98039216 0.80991736\n",
       " 0.67391304 0.84848485 0.85714286 0.98       0.85148515 0.9245283\n",
-      " 0.89320388 0.73913043 0.93617021]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.89320388 0.73913043 0.93617021]\n",
       "training:  38%|████████████                    | 99/263 [00:08<00:13, 12.53it/s]2021-12-02 21:02:34,651 INFO [7, 100], loss:  1.21674\n",
       "training:  76%|███████████████████████▍       | 199/263 [00:15<00:05, 12.52it/s]2021-12-02 21:02:42,637 INFO [7, 200], loss:  2.04234\n",
       "training: 100%|███████████████████████████████| 263/263 [00:21<00:00, 12.45it/s]\n",
@@ -3532,13 +3496,7 @@
       " 0.72380952 0.95238095 0.91304348 0.74074074 0.98       0.94230769\n",
       " 0.74       0.92473118 0.92592593 1.         0.87128713 0.97087379\n",
       " 0.91489362 0.86486486 0.93617021]\n",
-      "training:  38%|████████████                    | 99/263 [00:08<00:13, 12.52it/s]2021-12-02 21:22:28,788 INFO [44, 100], loss:  0.16475\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  38%|████████████                    | 99/263 [00:08<00:13, 12.52it/s]2021-12-02 21:22:28,788 INFO [44, 100], loss:  0.16475\n",
       "training:  76%|███████████████████████▍       | 199/263 [00:15<00:05, 12.52it/s]2021-12-02 21:22:36,772 INFO [44, 200], loss:  0.31107\n",
       "training: 100%|███████████████████████████████| 263/263 [00:21<00:00, 12.46it/s]\n",
       "2021-12-02 21:22:41,816 INFO epoch: 44, time: 21, loss:  0.09606\n",
@@ -3832,13 +3790,7 @@
       " 0.62686567 0.91954023 0.76470588 0.97435897 0.90666667 0.92857143\n",
       " 0.89189189 0.94871795 0.97560976]\n",
       "training:  31%|██████████                      | 99/315 [00:08<00:17, 12.50it/s]2021-12-02 21:33:03,010 INFO [12, 100], loss:  1.02277\n",
-      "training:  63%|███████████████████▌           | 199/315 [00:16<00:09, 12.52it/s]2021-12-02 21:33:10,998 INFO [12, 200], loss:  1.13851\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  63%|███████████████████▌           | 199/315 [00:16<00:09, 12.52it/s]2021-12-02 21:33:10,998 INFO [12, 200], loss:  1.13851\n",
       "training:  95%|█████████████████████████████▍ | 299/315 [00:23<00:01, 12.53it/s]2021-12-02 21:33:18,986 INFO [12, 300], loss:  0.93404\n",
       "training: 100%|███████████████████████████████| 315/315 [00:25<00:00, 12.45it/s]\n",
       "2021-12-02 21:33:20,213 INFO epoch: 12, time: 26, loss:  0.27671\n",
@@ -4009,13 +3961,7 @@
       " 0.71641791 0.93023256 0.875      1.         0.95       0.975\n",
       " 0.93670886 0.84507042 0.97435897]\n",
       "training:  31%|██████████                      | 99/315 [00:08<00:17, 12.53it/s]2021-12-02 21:39:42,818 INFO [23, 100], loss:  0.04175\n",
-      "training:  63%|███████████████████▌           | 199/315 [00:15<00:09, 12.53it/s]2021-12-02 21:39:50,805 INFO [23, 200], loss:  1.02310\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  63%|███████████████████▌           | 199/315 [00:15<00:09, 12.53it/s]2021-12-02 21:39:50,805 INFO [23, 200], loss:  1.02310\n",
       "training:  95%|█████████████████████████████▍ | 299/315 [00:23<00:01, 12.54it/s]2021-12-02 21:39:58,785 INFO [23, 300], loss:  1.69344\n",
       "training: 100%|███████████████████████████████| 315/315 [00:25<00:00, 12.46it/s]\n",
       "2021-12-02 21:40:00,006 INFO epoch: 23, time: 26, loss:  0.22483\n",
@@ -4282,13 +4228,7 @@
       " 0.68571429 0.975      0.95121951 0.98765432 0.93670886 0.98734177\n",
       " 0.925      0.84931507 0.90666667]\n",
       "training:  31%|██████████                      | 99/315 [00:08<00:17, 12.52it/s]2021-12-02 21:49:57,528 INFO [40, 100], loss:  0.38060\n",
-      "training:  63%|███████████████████▌           | 199/315 [00:16<00:09, 12.52it/s]2021-12-02 21:50:05,521 INFO [40, 200], loss:  0.47614\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  63%|███████████████████▌           | 199/315 [00:16<00:09, 12.52it/s]2021-12-02 21:50:05,521 INFO [40, 200], loss:  0.47614\n",
       "training:  95%|█████████████████████████████▍ | 299/315 [00:23<00:01, 12.51it/s]2021-12-02 21:50:13,509 INFO [40, 300], loss:  1.22176\n",
       "training: 100%|███████████████████████████████| 315/315 [00:25<00:00, 12.46it/s]\n",
       "2021-12-02 21:50:14,730 INFO epoch: 40, time: 25, loss:  0.16581\n",
@@ -4648,13 +4588,7 @@
       " 0.81690141 0.84375    0.82352941 0.98305085 0.9122807  0.96666667\n",
       " 0.92063492 0.83018868 0.96551724]\n",
       "training:  27%|████████▌                       | 99/368 [00:08<00:21, 12.51it/s]2021-12-02 22:04:16,722 INFO [12, 100], loss:  1.26284\n",
-      "training:  54%|████████████████▊              | 199/368 [00:15<00:13, 12.52it/s]2021-12-02 22:04:24,712 INFO [12, 200], loss:  1.45835\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  54%|████████████████▊              | 199/368 [00:15<00:13, 12.52it/s]2021-12-02 22:04:24,712 INFO [12, 200], loss:  1.45835\n",
       "training:  81%|█████████████████████████▏     | 299/368 [00:23<00:05, 12.52it/s]2021-12-02 22:04:32,700 INFO [12, 300], loss:  1.19362\n",
       "training: 100%|███████████████████████████████| 368/368 [00:29<00:00, 12.47it/s]\n",
       "2021-12-02 22:04:38,145 INFO epoch: 12, time: 30, loss:  0.30629\n",
@@ -4825,13 +4759,7 @@
       " 0.71428571 0.84615385 0.91525424 0.98305085 0.87719298 0.86956522\n",
       " 0.87878788 0.88135593 1.        ]\n",
       "training:  27%|████████▌                       | 99/368 [00:07<00:21, 12.55it/s]2021-12-02 22:11:42,832 INFO [23, 100], loss:  0.28821\n",
-      "training:  54%|████████████████▊              | 199/368 [00:15<00:13, 12.52it/s]2021-12-02 22:11:50,811 INFO [23, 200], loss:  0.63814\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  54%|████████████████▊              | 199/368 [00:15<00:13, 12.52it/s]2021-12-02 22:11:50,811 INFO [23, 200], loss:  0.63814\n",
       "training:  81%|█████████████████████████▏     | 299/368 [00:23<00:05, 12.52it/s]2021-12-02 22:11:58,793 INFO [23, 300], loss:  0.33661\n",
       "training: 100%|███████████████████████████████| 368/368 [00:29<00:00, 12.48it/s]\n",
       "2021-12-02 22:12:04,229 INFO epoch: 23, time: 30, loss:  0.11295\n",
@@ -5371,13 +5299,7 @@
       "2021-12-02 22:34:21,106 INFO F1_score Micro:0.8333333333333334, F1_score Macro:0.823350852434317, F1_score Weighted:0.8233508524343172, F1_score per Class:[0.94736842 0.97560976 0.91891892 0.0952381  0.76190476 0.97435897\n",
       " 0.375      0.97560976 0.76470588 0.87179487 0.97560976 0.95\n",
       " 0.72727273 0.88888889 0.89473684 0.97435897 0.57971014 0.89473684\n",
-      " 0.97560976 0.84210526 0.92682927]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.97560976 0.84210526 0.92682927]\n",
       "training:  24%|███████▌                        | 99/420 [00:08<00:25, 12.53it/s]2021-12-02 22:34:29,202 INFO [6, 100], loss:  2.78737\n",
       "training:  47%|██████████████▋                | 199/420 [00:16<00:17, 12.54it/s]2021-12-02 22:34:37,190 INFO [6, 200], loss:  1.43850\n",
       "training:  71%|██████████████████████         | 299/420 [00:23<00:09, 12.52it/s]2021-12-02 22:34:45,177 INFO [6, 300], loss:  2.46123\n",
@@ -5545,13 +5467,7 @@
       " 0.77777778 0.8372093  0.92682927 0.91891892 0.8        0.90909091\n",
       " 0.86486486 0.88888889 1.        ]\n",
       "training:  24%|███████▌                        | 99/420 [00:08<00:25, 12.52it/s]2021-12-02 22:41:57,222 INFO [16, 100], loss:  0.63680\n",
-      "training:  47%|██████████████▋                | 199/420 [00:15<00:17, 12.52it/s]2021-12-02 22:42:05,209 INFO [16, 200], loss:  0.45853\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  47%|██████████████▋                | 199/420 [00:15<00:17, 12.52it/s]2021-12-02 22:42:05,209 INFO [16, 200], loss:  0.45853\n",
       "training:  71%|██████████████████████         | 299/420 [00:23<00:09, 12.53it/s]2021-12-02 22:42:13,198 INFO [16, 300], loss:  1.54057\n",
       "training:  95%|█████████████████████████████▍ | 399/420 [00:31<00:01, 12.52it/s]2021-12-02 22:42:21,185 INFO [16, 400], loss:  1.21150\n",
       "training: 100%|███████████████████████████████| 420/420 [00:33<00:00, 12.47it/s]\n",
@@ -5719,13 +5635,7 @@
       "training:  24%|███████▌                        | 99/420 [00:08<00:25, 12.53it/s]2021-12-02 22:49:25,036 INFO [26, 100], loss:  0.09385\n",
       "training:  47%|██████████████▋                | 199/420 [00:15<00:17, 12.52it/s]2021-12-02 22:49:33,021 INFO [26, 200], loss:  0.31157\n",
       "training:  71%|██████████████████████         | 299/420 [00:23<00:09, 12.53it/s]2021-12-02 22:49:41,006 INFO [26, 300], loss:  0.33302\n",
-      "training:  95%|█████████████████████████████▍ | 399/420 [00:31<00:01, 12.53it/s]2021-12-02 22:49:48,992 INFO [26, 400], loss:  0.63446\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  95%|█████████████████████████████▍ | 399/420 [00:31<00:01, 12.53it/s]2021-12-02 22:49:48,992 INFO [26, 400], loss:  0.63446\n",
       "training: 100%|███████████████████████████████| 420/420 [00:33<00:00, 12.48it/s]\n",
       "2021-12-02 22:49:50,613 INFO epoch: 26, time: 34, loss:  0.08960\n",
       "testing on train set: 100%|███████████████████| 420/420 [00:08<00:00, 50.56it/s]\n",
@@ -6076,13 +5986,7 @@
       " 0.64       1.         1.         0.78947368 0.97560976 0.9\n",
       " 0.53333333 0.97435897 0.97435897 0.97435897 0.82352941 0.97435897\n",
       " 0.86486486 0.82608696 0.60869565]\n",
-      "training:  24%|███████▌                        | 99/420 [00:08<00:25, 12.53it/s]2021-12-02 23:05:04,565 INFO [47, 100], loss:  0.69504\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  24%|███████▌                        | 99/420 [00:08<00:25, 12.53it/s]2021-12-02 23:05:04,565 INFO [47, 100], loss:  0.69504\n",
       "training:  47%|██████████████▋                | 199/420 [00:15<00:17, 12.50it/s]2021-12-02 23:05:12,554 INFO [47, 200], loss:  0.24857\n",
       "training:  71%|██████████████████████         | 299/420 [00:23<00:09, 12.51it/s]2021-12-02 23:05:20,548 INFO [47, 300], loss:  0.40463\n",
       "training:  95%|█████████████████████████████▍ | 399/420 [00:31<00:01, 12.52it/s]2021-12-02 23:05:28,538 INFO [47, 400], loss:  0.95680\n",
@@ -6243,13 +6147,7 @@
       "2021-12-02 23:12:08,358 INFO F1_score Micro:0.8333333333333334, F1_score Macro:0.8296455431982862, F1_score Weighted:0.8296455431982862, F1_score per Class:[0.94736842 0.9        0.94736842 0.95238095 0.58333333 1.\n",
       " 0.5        0.90909091 0.74074074 0.82352941 1.         0.88888889\n",
       " 0.69565217 0.94736842 0.57142857 0.95238095 0.85714286 0.83333333\n",
-      " 0.70588235 0.66666667 1.        ]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 0.70588235 0.66666667 1.        ]\n",
       "training:  21%|██████▋                         | 99/473 [00:08<00:29, 12.51it/s]2021-12-02 23:12:16,448 INFO [6, 100], loss:  1.30914\n",
       "training:  42%|█████████████                  | 199/473 [00:15<00:21, 12.50it/s]2021-12-02 23:12:24,440 INFO [6, 200], loss:  0.99483\n",
       "training:  63%|███████████████████▌           | 299/473 [00:23<00:13, 12.50it/s]2021-12-02 23:12:32,437 INFO [6, 300], loss:  1.52027\n",
@@ -6417,13 +6315,7 @@
       " 0.83333333 0.90909091 0.8        1.         0.88888889 0.9\n",
       " 0.8        0.77777778 1.        ]\n",
       "training:  21%|██████▋                         | 99/473 [00:08<00:29, 12.51it/s]2021-12-02 23:20:26,916 INFO [16, 100], loss:  1.02727\n",
-      "training:  42%|█████████████                  | 199/473 [00:15<00:21, 12.53it/s]2021-12-02 23:20:34,901 INFO [16, 200], loss:  0.99304\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  42%|█████████████                  | 199/473 [00:15<00:21, 12.53it/s]2021-12-02 23:20:34,901 INFO [16, 200], loss:  0.99304\n",
       "training:  63%|███████████████████▌           | 299/473 [00:23<00:13, 12.52it/s]2021-12-02 23:20:42,887 INFO [16, 300], loss:  0.70407\n",
       "training:  84%|██████████████████████████▏    | 399/473 [00:31<00:05, 12.53it/s]2021-12-02 23:20:50,870 INFO [16, 400], loss:  0.29157\n",
       "training: 100%|███████████████████████████████| 473/473 [00:37<00:00, 12.48it/s]\n",
@@ -6591,13 +6483,7 @@
       "training:  21%|██████▋                         | 99/473 [00:08<00:29, 12.53it/s]2021-12-02 23:28:37,254 INFO [26, 100], loss:  2.61862\n",
       "training:  42%|█████████████                  | 199/473 [00:15<00:21, 12.53it/s]2021-12-02 23:28:45,235 INFO [26, 200], loss:  2.43163\n",
       "training:  63%|███████████████████▌           | 299/473 [00:23<00:13, 12.54it/s]2021-12-02 23:28:53,215 INFO [26, 300], loss:  2.25429\n",
-      "training:  84%|██████████████████████████▏    | 399/473 [00:31<00:05, 12.52it/s]2021-12-02 23:29:01,196 INFO [26, 400], loss:  0.65596\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "training:  84%|██████████████████████████▏    | 399/473 [00:31<00:05, 12.52it/s]2021-12-02 23:29:01,196 INFO [26, 400], loss:  0.65596\n",
       "training: 100%|███████████████████████████████| 473/473 [00:37<00:00, 12.49it/s]\n",
       "2021-12-02 23:29:07,038 INFO epoch: 26, time: 38, loss:  0.43690\n",
       "testing on train set: 100%|███████████████████| 473/473 [00:09<00:00, 50.42it/s]\n",
